<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.spbau.mit.foodmanager.RecipeViewActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Header of Recipe-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/recipe_header_photo"
                android:layout_width="125dp"
                android:layout_height="85dp"
                android:scaleType="centerInside" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/recipe_header_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/recipe_header_tags"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                    </LinearLayout>

                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>
        <!-- Recipe Controls -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/recipe_goto_stepbystep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_goto_stepbystep_str"
                android:onClick="onCookClick"/>
            <Button
                android:id="@+id/recipe_add_to_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_add_to_favorites_str"/>
            <Button
                android:id="@+id/recipe_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_like_str"/>
            <!-- TODO: redesign buttons -->
        </LinearLayout>
        <!-- Recipe Description -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_body_description_str"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/recipe_body_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_body_ingredients_str"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/recipe_body_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"/>
                <!--<TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_body_instruments_str"/
                    android:textSize="16sp"
                    android:textStyle="bold">
                <TextView
                    android:id="@+id/recipe_body_instruments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />-->
                <!--<TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_body_steps_shortcut_str"/
                    android:textSize="16sp"
                    android:textStyle="bold">
                <TextView
                    android:id="@+id/recipe_body_steps_shortcut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />-->
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/recipe_body_images"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                    </LinearLayout>

                </HorizontalScrollView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
